<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
  <name>sipeed_tof_ms_a010</name>
  <version>0.0.1</version>

  <description>
    ROS2 driver for Sipeed MaixSense A010 ToF camera
  </description>

  <maintainer email="taorye@outlook.com">taorye</maintainer>
  <license>MIT</license>

  <!-- build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- runtime + build dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <!-- OpenCV is a system dependency -->
  <exec_depend>opencv</exec_depend>

  <!-- testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

