<?xml version="1.0"?>
<package format="3">
  <name>tof_stvl_test</name>
  <version>0.0.1</version>
  <description>Isolated STVL local costmap test with fake ToF obstacle cloud.</description>
  <maintainer email="ros_estudo@example.com">ros_estudo</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>nav2_costmap_2d</exec_depend>
  <exec_depend>spatio_temporal_voxel_layer</exec_depend>

  <buildtool_depend>ament_python</buildtool_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
